--- a/templates/search_results.html.twig
+++ b/templates/search_results.html.twig
@@ -27,6 +27,7 @@
 									<th>{{ __('Name') }}</th>
 									<th>{{ __('Status') }}</th>
 									<th>{{ __('Technician') }}</th>
+									<th>{{ __('Requester') }}</th>
 									<th>{{ __('Date') }}</th>
 								</tr>
 							</thead>
@@ -41,6 +42,7 @@
 										<td>{{ t.name }}</td>
 										<td>{{ t.status_name }}</td>
 										<td>{{ t.tech_name }}</td>
+										<td>{{ t.requester_name|default(__('Unknown')) }}</td>
 										<td>{{ t.date }}</td>
 									</tr>
 								{% endfor %}
@@ -62,6 +64,7 @@
 								<tr>
 									<th>{{ __('ID') }}</th>
 									<th>{{ __('Name') }}</th>
+									<th>{{ __('Requester') }}</th>
 									<th>{{ __('Date') }}</th>
 								</tr>
 							</thead>
@@ -74,6 +77,7 @@
 											</a>
 										</td>
 										<td>{{ p.name }}</td>
+										<td>{{ p.requester_name|default(__('Unknown')) }}</td>
 										<td>{{ p.plan_start_date ?: p.date }}</td>
 									</tr>
 								{% endfor %}
@@ -198,6 +202,7 @@
 								<tr>
 									<th>{{ __('ID') }}</th>
 									<th>{{ __('Ticket') }}</th>
+									<th>{{ __('Requester') }}</th>
 									<th>{{ __('Content') }}</th>
 									<th>{{ __('Date') }}</th>
 								</tr>
@@ -217,6 +222,7 @@
 												{{ tt.ticket_name }}
 											</a>
 										</td>
+										<td>{{ tt.requester_name|default(__('Unknown')) }}</td>
 										<td>{{ tt.content|striptags|u.truncate(100, '...') }}</td>
 										<td>{{ tt.date }}</td>
 									</tr>
@@ -239,6 +245,7 @@
 								<tr>
 									<th>{{ __('ID') }}</th>
 									<th>{{ __('Name') }}</th>
+									<th>{{ __('Requester') }}</th>
 									<th>{{ __('Project') }}</th>
 									<th>{{ __('Date') }}</th>
 								</tr>
@@ -252,6 +259,7 @@
 											</a>
 										</td>
 										<td>{{ pt.name }}</td>
+										<td>{{ pt.requester_name|default(__('Unknown')) }}</td>
 										<td>
 											<a href="{{ path('front/project.form.php') ~ '?id=' ~ pt.projects_id }}">
 												#{{ pt.projects_id }}
